[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imagenes/Pal gei/fig41111.png" type="Texture" id=1]
[ext_resource path="res://Scrips/Nivel_2/figura3_1.gd" type="Script" id=2]
[ext_resource path="res://Scrips/Nivel_2/level_1/nivel_2_figura3_1.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.08

[node name="nivel_2_figura3_1" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="figura" type="TextureRect" parent="."]
margin_left = 196.0
margin_top = 581.0
margin_right = 196.0
margin_bottom = 581.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="figura"]
modulate = Color( 1, 1, 1, 0.796078 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="figura/Sprite"]
margin_left = -95.0
margin_top = -99.0
margin_right = 98.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="figura/Sprite"]
margin_left = -134.0
margin_top = -42.0
margin_right = 135.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="figura/Sprite"]
margin_left = -48.0
margin_top = -132.0
margin_right = 41.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="figura"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="figura/Area2D"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="Area_teselado" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area_teselado"]
polygon = PoolVector2Array( 421, -341, 418, 1371, 1504, 1354, 1499, -320 )

[connection signal="move_to_top" from="figura" to="." method="_on_figura_move_to_top"]
[connection signal="gui_input" from="figura/Sprite/TextureRect" to="figura" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="figura/Sprite/TextureRect2" to="figura" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="figura/Sprite/TextureRect3" to="figura" method="_on_TextureRect_gui_input"]
[connection signal="area_entered" from="figura/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="figura/Area2D" to="." method="_on_Area2D_area_exited"]
